<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_refresh" android:title="@string/action_refresh" android:orderInCategory="1" android:showAsAction="never|ifRoom" android:icon="@drawable/ic_action_refresh"></item><item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:showAsAction="never|ifRoom"
        android:title="@string/action_settings" android:icon="@drawable/ic_action_settings"/>
    
    
    <item android:id="@+id/action_reinitialize" android:title="@string/action_reinitialize" android:orderInCategory="3" android:visible="false"></item><item android:id="@+id/action_about" android:title="@string/action_about" android:orderInCategory="5" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_about"></item>
    <item android:id="@+id/action_help" android:title="@string/title_activity_help" android:orderInCategory="4" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_help"></item>
</menu>
